--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -58,10 +58,13 @@ button:hover {
     border-radius: 4px;
     background: #FAFAFA;
     padding-bottom: 15px;
+	padding-top: 0px;
     height: 300px;
     overflow-y: scroll;
     scrollbar-width: none;
     max-height: 300px;
+	position: relative;
+	top: -1px;
 }
 
 .popover::-webkit-scrollbar{
@@ -69,7 +72,6 @@ button:hover {
 }
 
 .amenities .popover {
-    padding: 10px 0;
     margin-left: -5px;
     margin-top: 0%;
 }
